crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__boseiju_who_endures_ir.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&ir"
---
{
  "items": [
    {
      "id": 0,
      "source": {
        "id": {
          "item": 0,
          "ordinal": 0
        },
        "span": {
          "first_line": 0,
          "last_line": 0,
          "start_byte": 0,
          "end_byte": 13,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "{T}: Add {G}."
      },
      "node": {
        "Spell": {
          "source_text": "Add {G}",
          "body": {
            "clauses": [
              {
                "id": 0,
                "source": {
                  "id": {
                    "item": 0,
                    "ordinal": 1
                  },
                  "span": {
                    "first_line": 0,
                    "last_line": 0,
                    "start_byte": 0,
                    "end_byte": 7,
                    "precision": "ChainRelative",
                    "ordinal_within_span": 0
                  },
                  "fragment": "Add {G}"
                },
                "disposition": {
                  "Emit": {
                    "followup": null,
                    "intrinsic": null
                  }
                },
                "parsed": {
                  "effect": {
                    "type": "Mana",
                    "produced": {
                      "type": "Fixed",
                      "colors": [
                        "Green"
                      ]
                    }
                  },
                  "duration": null,
                  "sub_ability": null,
                  "distribute": null,
                  "multi_target": null,
                  "condition": null,
                  "optional": false,
                  "unless_pay": null
                },
                "boundary": null,
                "condition": null,
                "is_optional": false,
                "opponent_may_scope": null,
                "repeat_for": null,
                "player_scope": null,
                "starting_with": null,
                "delayed_condition": null,
                "prefix_delayed_condition": null,
                "multi_target": null,
                "where_x_expression": null,
                "unless_pay": null
              }
            ],
            "kind": "Activated",
            "continuation_kind": null,
            "player_scope_rewrite": "Apply",
            "chain_rounding": null,
            "actor": null,
            "in_trigger": false,
            "repeat_until": null
          },
          "shell": {
            "sub_link": null,
            "cost": {
              "type": "Tap"
            },
            "description": "{T}: Add {G}.",
            "stages": [
              "NormalizeActivatedManaInstead",
              "ExtractCostReduction",
              "ExtractManaSpendTrigger"
            ]
          },
          "die_results": [],
          "root_transforms": []
        }
      }
    },
    {
      "id": 1,
      "source": {
        "id": {
          "item": 1,
          "ordinal": 0
        },
        "span": {
          "first_line": 1,
          "last_line": 1,
          "start_byte": 14,
          "end_byte": 330,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "Channel — {1}{G}, Discard this card: Destroy target artifact, enchantment, or nonbasic land an opponent controls. That player may search their library for a land card with a basic land type, put it onto the battlefield, then shuffle. This ability costs {1} less to activate for each legendary creature you control."
      },
      "node": {
        "Spell": {
          "source_text": "Destroy target artifact, enchantment, or nonbasic land an opponent controls. That player may search their library for a land card with a basic land type, put it onto the battlefield, then shuffle. This ability costs {1} less to activate for each legendary creature you control",
          "body": {
            "clauses": [
              {
                "id": 0,
                "source": {
                  "id": {
                    "item": 0,
                    "ordinal": 1
                  },
                  "span": {
                    "first_line": 0,
                    "last_line": 0,
                    "start_byte": 0,
                    "end_byte": 75,
                    "precision": "ChainRelative",
                    "ordinal_within_span": 0
                  },
                  "fragment": "Destroy target artifact, enchantment, or nonbasic land an opponent controls"
                },
                "disposition": {
                  "Emit": {
                    "followup": null,
                    "intrinsic": null
                  }
                },
                "parsed": {
                  "effect": {
                    "type": "Destroy",
                    "target": {
                      "type": "Or",
                      "filters": [
                        {
                          "type": "Typed",
                          "type_filters": [
                            "Artifact"
                          ],
                          "controller": "Opponent",
                          "properties": []
                        },
                        {
                          "type": "Typed",
                          "type_filters": [
                            "Enchantment"
                          ],
                          "controller": "Opponent",
                          "properties": []
                        },
                        {
                          "type": "Typed",
                          "type_filters": [
                            "Land"
                          ],
                          "controller": "Opponent",
                          "properties": [
                            {
                              "type": "NotSupertype",
                              "value": "Basic"
                            }
                          ]
                        }
                      ]
                    },
                    "cant_regenerate": false
                  },
                  "duration": null,
                  "sub_ability": null,
                  "distribute": null,
                  "multi_target": null,
                  "condition": null,
                  "optional": false,
                  "unless_pay": null
                },
                "boundary": "Sentence",
                "condition": null,
                "is_optional": false,
                "opponent_may_scope": null,
                "repeat_for": null,
                "player_scope": null,
                "starting_with": null,
                "delayed_condition": null,
                "prefix_delayed_condition": null,
                "multi_target": null,
                "where_x_expression": null,
                "unless_pay": null
              },
              {
                "id": 1,
                "source": {
                  "id": {
                    "item": 0,
                    "ordinal": 2
                  },
                  "span": {
                    "first_line": 0,
                    "last_line": 0,
                    "start_byte": 77,
                    "end_byte": 152,
                    "precision": "ChainRelative",
                    "ordinal_within_span": 1
                  },
                  "fragment": "That player may search their library for a land card with a basic land type"
                },
                "disposition": {
                  "Emit": {
                    "followup": null,
                    "intrinsic": {
                      "SearchDestination": {
                        "destination": "Battlefield",
                        "enter_tapped": false,
                        "enters_under": "Default",
                        "reveal": false,
                        "attach_host": null
                      }
                    }
                  }
                },
                "parsed": {
                  "effect": {
                    "type": "SearchLibrary",
                    "filter": {
                      "type": "Typed",
                      "type_filters": [
                        "Land",
                        {
                          "AnyOf": [
                            {
                              "Subtype": "Plains"
                            },
                            {
                              "Subtype": "Island"
                            },
                            {
                              "Subtype": "Swamp"
                            },
                            {
                              "Subtype": "Mountain"
                            },
                            {
                              "Subtype": "Forest"
                            }
                          ]
                        }
                      ],
                      "controller": null,
                      "properties": []
                    },
                    "count": {
                      "type": "Fixed",
                      "value": 1
                    },
                    "reveal": false,
                    "target_player": {
                      "type": "ParentTargetController"
                    }
                  },
                  "duration": null,
                  "sub_ability": null,
                  "distribute": null,
                  "multi_target": null,
                  "condition": null,
                  "optional": true,
                  "unless_pay": null
                },
                "boundary": "Comma",
                "condition": null,
                "is_optional": false,
                "opponent_may_scope": null,
                "repeat_for": null,
                "player_scope": null,
                "starting_with": null,
                "delayed_condition": null,
                "prefix_delayed_condition": null,
                "multi_target": null,
                "where_x_expression": null,
                "unless_pay": null
              },
              {
                "id": 2,
                "source": {
                  "id": {
                    "item": 0,
                    "ordinal": 3
                  },
                  "span": {
                    "first_line": 0,
                    "last_line": 0,
                    "start_byte": 154,
                    "end_byte": 181,
                    "precision": "ChainRelative",
                    "ordinal_within_span": 2
                  },
                  "fragment": "put it onto the battlefield"
                },
                "disposition": {
                  "Continue": {
                    "continuation": "SearchResultClauseHandled"
                  }
                },
                "parsed": {
                  "effect": {
                    "type": "ChangeZone",
                    "origin": null,
                    "destination": "Battlefield",
                    "target": {
                      "type": "ParentTarget"
                    },
                    "owner_library": false,
                    "enter_transformed": false,
                    "enter_tapped": false,
                    "enters_attacking": false
                  },
                  "duration": null,
                  "sub_ability": null,
                  "distribute": null,
                  "multi_target": null,
                  "condition": null,
                  "optional": false,
                  "unless_pay": null
                },
                "boundary": "Then",
                "condition": null,
                "is_optional": false,
                "opponent_may_scope": null,
                "repeat_for": null,
                "player_scope": null,
                "starting_with": null,
                "delayed_condition": null,
                "prefix_delayed_condition": null,
                "multi_target": null,
                "where_x_expression": null,
                "unless_pay": null
              },
              {
                "id": 3,
                "source": {
                  "id": {
                    "item": 0,
                    "ordinal": 4
                  },
                  "span": {
                    "first_line": 0,
                    "last_line": 0,
                    "start_byte": 188,
                    "end_byte": 195,
                    "precision": "ChainRelative",
                    "ordinal_within_span": 3
                  },
                  "fragment": "shuffle"
                },
                "disposition": {
                  "Emit": {
                    "followup": null,
                    "intrinsic": null
                  }
                },
                "parsed": {
                  "effect": {
                    "type": "Shuffle",
                    "target": {
                      "type": "ParentTargetController"
                    }
                  },
                  "duration": null,
                  "sub_ability": null,
                  "distribute": null,
                  "multi_target": null,
                  "condition": null,
                  "optional": false,
                  "unless_pay": null
                },
                "boundary": "Sentence",
                "condition": null,
                "is_optional": false,
                "opponent_may_scope": null,
                "repeat_for": null,
                "player_scope": null,
                "starting_with": null,
                "delayed_condition": null,
                "prefix_delayed_condition": null,
                "multi_target": null,
                "where_x_expression": null,
                "unless_pay": null
              },
              {
                "id": 4,
                "source": {
                  "id": {
                    "item": 0,
                    "ordinal": 5
                  },
                  "span": {
                    "first_line": 0,
                    "last_line": 0,
                    "start_byte": 197,
                    "end_byte": 276,
                    "precision": "ChainRelative",
                    "ordinal_within_span": 4
                  },
                  "fragment": "This ability costs {1} less to activate for each legendary creature you control"
                },
                "disposition": {
                  "Emit": {
                    "followup": null,
                    "intrinsic": null
                  }
                },
                "parsed": {
                  "effect": {
                    "type": "Unimplemented",
                    "name": "unrecognized_clause_head",
                    "description": "This ability costs {1} less to activate for each legendary creature you control"
                  },
                  "duration": null,
                  "sub_ability": null,
                  "distribute": null,
                  "multi_target": null,
                  "condition": null,
                  "optional": false,
                  "unless_pay": null
                },
                "boundary": null,
                "condition": null,
                "is_optional": false,
                "opponent_may_scope": null,
                "repeat_for": null,
                "player_scope": null,
                "starting_with": null,
                "delayed_condition": null,
                "prefix_delayed_condition": null,
                "multi_target": null,
                "where_x_expression": null,
                "unless_pay": null
              }
            ],
            "kind": "Activated",
            "continuation_kind": null,
            "player_scope_rewrite": "Apply",
            "chain_rounding": null,
            "actor": null,
            "in_trigger": false,
            "repeat_until": null
          },
          "shell": {
            "sub_link": null,
            "cost": {
              "type": "Composite",
              "costs": [
                {
                  "type": "Mana",
                  "cost": {
                    "type": "Cost",
                    "shards": [
                      "Green"
                    ],
                    "generic": 1
                  }
                },
                {
                  "type": "Discard",
                  "count": {
                    "type": "Fixed",
                    "value": 1
                  },
                  "filter": null,
                  "random": false,
                  "self_ref": true
                }
              ]
            },
            "activation_zone": "Hand",
            "description": "Channel — {1}{G}, Discard this card: Destroy target artifact, enchantment, or nonbasic land an opponent controls. That player may search their library for a land card with a basic land type, put it onto the battlefield, then shuffle. This ability costs {1} less to activate for each legendary creature you control.",
            "stages": [
              "ExtractCostReduction",
              "ExtractManaSpendTrigger"
            ]
          },
          "die_results": [],
          "root_transforms": []
        }
      }
    }
  ],
  "source_text": "{T}: Add {G}.\nChannel — {1}{G}, Discard this card: Destroy target artifact, enchantment, or nonbasic land an opponent controls. That player may search their library for a land card with a basic land type, put it onto the battlefield, then shuffle. This ability costs {1} less to activate for each legendary creature you control.",
  "card_name": "Boseiju, Who Endures"
}
