crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__brazen_borrower_ir.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&ir"
---
{
  "items": [
    {
      "id": 0,
      "source": {
        "id": {
          "item": 0,
          "ordinal": 0
        },
        "span": {
          "first_line": 0,
          "last_line": 0,
          "start_byte": 0,
          "end_byte": 5,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "Flash"
      },
      "node": {
        "Unsupported": {
          "unsupported": {
            "name": "unknown",
            "fragment": "Flash",
            "description": "Flash"
          },
          "min_x_value": 0
        }
      }
    },
    {
      "id": 1,
      "source": {
        "id": {
          "item": 1,
          "ordinal": 0
        },
        "span": {
          "first_line": 1,
          "last_line": 1,
          "start_byte": 6,
          "end_byte": 12,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "Flying"
      },
      "node": {
        "Unsupported": {
          "unsupported": {
            "name": "unknown",
            "fragment": "Flying",
            "description": "Flying"
          },
          "min_x_value": 0
        }
      }
    },
    {
      "id": 2,
      "source": {
        "id": {
          "item": 2,
          "ordinal": 0
        },
        "span": {
          "first_line": 2,
          "last_line": 2,
          "start_byte": 13,
          "end_byte": 52,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "~ can block only creatures with flying."
      },
      "node": {
        "Static": {
          "definition": {
            "mode": {
              "BlockRestriction": {
                "filter": {
                  "type": "Typed",
                  "type_filters": [
                    "Creature"
                  ],
                  "controller": null,
                  "properties": [
                    {
                      "type": "WithKeyword",
                      "value": "Flying"
                    }
                  ]
                }
              }
            },
            "affected": {
              "type": "SelfRef"
            },
            "modifications": [],
            "condition": null,
            "affected_zone": null,
            "effect_zone": null,
            "active_zones": [],
            "characteristic_defining": false,
            "description": "~ can block only creatures with flying."
          },
          "source_text": "~ can block only creatures with flying.",
          "body_ir": null
        }
      }
    }
  ],
  "source_text": "Flash\nFlying\nThis creature can block only creatures with flying.",
  "card_name": "Brazen Borrower"
}
